fix spacing for bottom subtext

--- a/css/app.css
+++ b/css/app.css
@@ -238,6 +238,10 @@ footer {
   font-size: 0.75rem;
 }
 
+.bottom-sub-text {
+  margin-top: 30px;
+}
+
 #menu-title {
   font-size: 2.5rem;
   margin: auto;
